# Soundboard-Program

./: .gitignore  README.md  requirements.txt
soundboard/: README.md  __init__.py  pyproject.toml
soundboard/app/: config.py  main.py
soundboard/src/: main.py
soundboard/src/managers/: __init__.py  audio_player.py  sound_manager.py
soundboard/src/models/: __init__.py  sound_model.py
soundboard/src/ui/: components.py  folder_view.py  main_window.py  sound_card.py  sound_grid.py
soundboard/ui/: main_window.py
